# ChangeLog for sys-power/powertop
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-power/powertop/ChangeLog,v 1.22 2008/01/16 19:15:37 fmccor Exp $

  16 Jan 2008; Ferris McCormick <fmccor@gentoo.org> powertop-1.9.ebuild:
  Sparc stable, Bug #202082 (although I am not sure it is meaningful on sparc,
  given the description).

  16 Dec 2007; Samuli Suominen <drac@gentoo.org> powertop-1.9.ebuild:
  amd64 stable wrt #202082

  14 Dec 2007; nixnut <nixnut@gentoo.org> powertop-1.9.ebuild:
  Stable on ppc wrt bug 202082

  13 Dec 2007; Christian Faulhammer <opfer@gentoo.org> powertop-1.9.ebuild:
  stable x86, bug 202082

*powertop-1.9 (06 Nov 2007)

  06 Nov 2007; Stefan Schweizer <genstef@gentoo.org> +powertop-1.9.ebuild:
  version bump

*powertop-1.8 (30 Aug 2007)

  30 Aug 2007; Stefan Schweizer <genstef@gentoo.org> +powertop-1.8.ebuild:
  version bump

  16 Aug 2007; Christoph Mende <angelos@gentoo.org> powertop-1.7.ebuild:
  Stable on amd64 wrt bug #188590

  13 Aug 2007; Gustavo Zacarias <gustavoz@gentoo.org> powertop-1.7.ebuild:
  Stable on sparc wrt #188590

  12 Aug 2007; Andrej Kacian <ticho@gentoo.org> powertop-1.7.ebuild:
  Stable on x86, bug #188590.

  04 Jul 2007; Gustavo Zacarias <gustavoz@gentoo.org> powertop-1.7.ebuild:
  Keyworded ~sparc wrt #183769

*powertop-1.7 (19 Jun 2007)

  19 Jun 2007; Timothy Redaelli <drizzt@gentoo.org> -powertop-1.6.ebuild,
  +powertop-1.7.ebuild:
  New version.
  Authorized by genstef.

  10 Jun 2007; Timothy Redaelli <drizzt@gentoo.org> powertop-1.6.ebuild:
  Add ~ppc keyword.

*powertop-1.6 (09 Jun 2007)

  09 Jun 2007; Stefan Schweizer <genstef@gentoo.org> -powertop-1.5.ebuild,
  +powertop-1.6.ebuild:
  version bump

  31 May 2007; Mike Frysinger <vapier@gentoo.org> powertop-1.5.ebuild:
  Remove stupid USE=unicode requirement and make sure LDFLAGS are respected.

  29 May 2007; Stefan Schweizer <genstef@gentoo.org> powertop-1.5.ebuild: