@@ -1,8 +1,10 @@
+DIST powertop-1.10.tar.gz 72842 RMD160 2645ac43cf6de018af240308890f3ce5346a5564 SHA1 c75d475098be7c2a0b006457f6aceb429f84bdc0 SHA256 cc60000bbe5f4d7b9beae8a84e1cd1ba69339a489a7d1a7365a3d8fe8fd73d6b
 DIST powertop-1.7.tar.gz 57130 RMD160 76e89d0bae6ae6008bec181b412fa580376c939d SHA1 c4055550be74ad371b63062a82fb6dc91f6ae381 SHA256 b0a1ce0be649499da90da2845daeb93f2f2ebc7784bacc8aec5042910b958604
 DIST powertop-1.8.tar.gz 66947 RMD160 490b8ae69bfba22d075e07de45c91178da89e5ca SHA1 815ac769d8a8a0f0eefbd609bf8d5ec5c87188c3 SHA256 7325ea46e5af59c12ea024e69622ac7753010c8de615d668e1f03b0fc05bad3a
 DIST powertop-1.9.tar.gz 69395 RMD160 d10c56e7222cb601d28f2d440385fa703a4b542b SHA1 35464952281373f38ce1694d6543aa20cbc8759d SHA256 41899a12c3436a3e623744f41b459d4a7a7aa96da32b22a3b301037b54062594
+EBUILD powertop-1.10.ebuild 1061 RMD160 2123b55590e06e5637734e6e47f3f7641c4f0218 SHA1 42d4cfc42258e63530818a998743ee4a948d59bf SHA256 fc3d9a33d4a8e0eaacd61830e6c085cc34abfc997fa4cadd75a75d516625525e
 EBUILD powertop-1.7.ebuild 1026 RMD160 bebf7fc8163a1cc977b980d47cc13a59c7a09d1e SHA1 2b3c6dbfa112a9206ff99cf1f296ca550d3c0961 SHA256 0545fb0372218966cc3d6fe8bf30915c6bc05b98ada1696d88edd72030a0a8bb
 EBUILD powertop-1.8.ebuild 1031 RMD160 bc474b900c046eaed72ae0e0b60dd44ad883116a SHA1 87ee2148768b96119ca809892480da89fe293ecf SHA256 0c610d3e3ed11a3dca0e95b64a392084d69595a367f776b7d0587454411d4728
 EBUILD powertop-1.9.ebuild 1025 RMD160 daad103039caa2357bf9192ede69a08e690d463c SHA1 2d0defb6b107b085b77da9d5a96d7eb2e35acd4c SHA256 2fc69c1ac4e3b9993025f7b77d444a1330985769180936f1e8de0e137a85e368
-MISC ChangeLog 3321 RMD160 96901559ca54a009cc9e403017ee52f5860a723e SHA1 8b44373819efb450d0b01c05d5cbbafb575688b3 SHA256 970fcb8cdd53da44fe35241f1efe14fd87e5ba4836991fce11a14bf7f3d44432
+MISC ChangeLog 3452 RMD160 c11f42298f2e41f93e3b57844686446e71e33c12 SHA1 314c658583729594526925b6d6c2e1fb91b99d89 SHA256 56614c65fbbdb5717c2aa9409236da8155f3f1307b33060a7770f51a003563f9
 MISC metadata.xml 161 RMD160 a5e1f234c4886ff31d39f229a0cf30d0bfcea869 SHA1 3876fd42cd9e63a7edb04c5025d53d773aa80bc3 SHA256 838bd208a7f948ea9b4e2b8869464622bc64a2f02468de4c3d7f6c2530e28e89
