@@ -1,6 +1,11 @@
 # ChangeLog for sys-power/powertop
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-power/powertop/ChangeLog,v 1.22 2008/01/16 19:15:37 fmccor Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-power/powertop/ChangeLog,v 1.23 2008/08/31 22:21:07 loki_val Exp $
+
+*powertop-1.10 (31 Aug 2008)
+
+  31 Aug 2008; Peter Alfredsen <loki_val@gentoo.org> +powertop-1.10.ebuild:
+  Bump wrt bug 226373
 
   16 Jan 2008; Ferris McCormick <fmccor@gentoo.org> powertop-1.9.ebuild:
   Sparc stable, Bug #202082 (although I am not sure it is meaningful on sparc,
